--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
+:root {
+  --primary: #002651;
+  --secondary: #ffc400;
+}
+
+* {
+  font-family: 'Poppins', sans-serif;
+}
+
+header {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header h1 {
+  margin-bottom: 20px;
+  font-size: 80px;
+  color: var(--primary);
+  font-weight: 200;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input-todo {
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--primary);
+  border: none;
+  outline: none;
+  border-bottom: 2px solid var(--secondary);
+  border-radius: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-todo:focus {
+  box-shadow: none;
 }
